belajar git remote repository

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<p>belajar git itu membagongkan</p>
 
-ae2370e9432ade593d9f7f3cc700266be5c42e6e
+<html>
+    <head>
+        <meta charset-"utf-8">
+            <title>Home</title>
+    <body>
+        <h1>ini adalah Home</h1>
+        <p>belajar git : remote rapository</p>
+    </body>
+</html>
